fix whitespace

--- a/app/assets/stylesheets/base/colors.css.scss
+++ b/app/assets/stylesheets/base/colors.css.scss
@@ -14,8 +14,8 @@
 
   html { background: $grey-light; }
 
-  body{ color: $grey-med; }
-  a{    color: $grey-dark;  }
+  body{ color: $grey-dark; }
+  a{    color: $grey-med;  }
 
   .header > h1 > a{ color: $grey-med; }
 
